fix for background image on iOS

--- a/css/style.scss
+++ b/css/style.scss
@@ -21,6 +21,11 @@ body {
         width: 100%;
         height: 100%;
         z-index: -10;
+
+        @supports (-webkit-overflow-scrolling: touch) {
+            background-attachment: initial;
+        }
+
     }
 
     a {
@@ -281,7 +286,7 @@ body {
                 }
 
             }
-             
+
         }
 
     }
